--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "sssss"
+    "url": "https://github.com/DarksideEvil/FAST-FOOD__BACKEND.git"
   },
   "keywords": [
     "fast-food",
