--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "food-backend"
   ],
   "author": "Behruz",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mongoose": "^8.0.3"
+  }
 }
