--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "fast-food",
   "version": "1.0.0",
   "description": "unrepeatable fast-food app's backend",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,14 @@
   "author": "Behruz",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^8.0.3"
+    "crypto-js": "^4.2.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "yup": "^1.3.3"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1",
+    "nodemon": "^3.0.2"
   }
 }
