--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "unrepeatable fast-food app's backend",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "node --watch src/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,13 +19,13 @@
   "license": "ISC",
   "dependencies": {
     "crypto-js": "^4.2.0",
+    "decimal.js": "^10.4.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "dotenv": "^16.3.1",
-    "nodemon": "^3.0.2"
+    "dotenv": "^16.3.1"
   }
 }
